# MSGraphMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  MSGraphMCP.sln  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: CONNECTION_RESET_ISSUE.md  create-observability-workbook.ps1  deploy-aci.ps1  deploy-aci.sh  fix-azure-cli-extension-cache.ps1  kql-dashboard-pack.md  mcp-diagnostics-kql.ipynb  run-full-validation.ps1  run-local.ps1  run-local.sh  run-scope-smoke.ps1  setup-aci-alerts.ps1  test-all-tools.ps1  test-connection-reset.ps1  test-mail-search.ps1  test-mail-summarize-context.ps1  update-aci.ps1
src/MSGraphMCP/: MSGraphMCP.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/MSGraphMCP/Auth/: BlobTokenCache.cs  GraphAuthProvider.cs
src/MSGraphMCP/Session/: SessionContext.cs  SessionStore.cs
src/MSGraphMCP/Telemetry/: McpCorrelationTelemetryInitializer.cs
src/MSGraphMCP/Tools/: AuthTools.cs  CalendarTools.cs  FilesTools.cs  MailTools.cs  McpToolRegistration.cs  OneNoteTools.cs  PlannerTools.cs  SchemaValidatingMcpServerTool.cs  SharePointTools.cs  TeamsTools.cs
src/msgraph_mcp/: __init__.py  auth.py  graph_client.py  server.py
src/msgraph_mcp/tools/: __init__.py  calendar.py  files.py  mail.py  teams.py  users.py
tests/: __init__.py  conftest.py  test_auth.py  test_graph_client.py  test_tools_calendar.py  test_tools_files.py  test_tools_mail.py  test_tools_teams.py  test_tools_users.py
