[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msgraph-mcp"
version = "0.1.0"
description = "Microsoft Graph MCP server supporting Teams and Microsoft 365 use cases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "microsoft-graph", "teams", "microsoft-365", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "msal>=1.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[project.scripts]
msgraph-mcp = "msgraph_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/msgraph_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
